<resources>
    <string name="app_name">CurrencyExchange</string>
    <string name="converted_amount">Converted Amount</string>
    <string name="_0">0</string>
    <string name="to_currency">Exchange To</string>
    <string name="amount">Amount</string>
    <string name="from_currency">Exchange From</string>
    <string name="convert">Convert</string>
    <string name="https_v6_exchangerate_api_com_v6_your_api_key_history_usd_year_month_day">https://v6.exchangerate-api.com/v6/YOUR-API-KEY/history/USD/YEAR/MONTH/DAY</string>
    <string name="dummy_data_chart_because_above_api_is_not_free">Dummy Data Chart Because above api is not free</string>
    <string name="historical_rates_graph">Historical Rates Graph</string>
</resources>