<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".view.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/from_currency"
        app:layout_constraintEnd_toStartOf="@+id/sp_from_currency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sp_from_currency" />

    <Spinner
        android:id="@+id/sp_from_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:spinnerMode="dialog"
        android:popupBackground="@drawable/bg"
        android:background="@drawable/spinner_bg"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView55"
        app:layout_constraintTop_toBottomOf="@+id/et_amount" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/editetext_bg"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/to_currency"
        app:layout_constraintEnd_toStartOf="@+id/sp_to_currency"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_from_currency" />

    <Spinner
        android:id="@+id/sp_to_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:spinnerMode="dialog"
        android:popupBackground="@drawable/bg"
        android:background="@drawable/spinner_bg"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/converted_amount"
        app:layout_constraintEnd_toStartOf="@+id/tv_exchanged_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/tv_exchanged_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView6"
        android:layout_toEndOf="@+id/textView5"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />


    <Button
        android:id="@+id/bt_convert"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/convert"
        app:layout_constraintBottom_toTopOf="@+id/bt_graph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_graph"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="44dp"
        android:text="@string/historical_rates_graph"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>